--- a/client/src/assets/styles/scss/_variables.scss
+++ b/client/src/assets/styles/scss/_variables.scss
@@ -1,10 +1,7 @@
-$color-bg: #f5f5f5;
-$color-text: #333;
-$color-primary: #f38a21;
-$color-secondary: #6c757d;
-$color-success: #28a745;
-$color-info: #17a2b8;
-$color-warning: #ffc107;
-$color-danger: #dc3545;
-$color-light: #f8f9fa;
-$color-dark: #343a40;
+
+// variable scss
+$primary-color: #f4f4f4;
+$secondary-color: #ff7f00;
+$light-color: #f7f7f7;
+$dark-color: #333;
+$danger-color: #ff0000;	
